[metadata]
name = termuxgui
version = 0.0.1
author = Tarek Sander
description = Python bindings for the Termux:GUI plugin.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tareksander/termux-gui
project_urls =
    Bug Tracker = https://github.com/tareksander/termux-gui/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Other OS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src